--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ meta-secret/web-cli/ui/dist
 meta-secret/web-cli/ui/pkg
 
 .vscode
+.aider*
+
+infra/.env
+infra/.secret
+/infra/k8s/meta-secret-server/build/
+/infra/k8s/Taskfile.yml
+/infra/k3d/Taskfile.yml
