--- a/meta-secret/mobile/Cargo.toml
+++ b/meta-secret/mobile/Cargo.toml
@@ -19,6 +19,7 @@ serde_json.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 tracing-attributes.workspace = true
+reqwest = "0.12.15"
 
 [dev-dependencies]
 tokio = { version = "1.44.1", features = ["full"] }
