--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -57,5 +57,5 @@ tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 http = "1.3.1"
 
 # Sql
-diesel = { version = "2.2.8" }
+diesel = { version = "2.2.8", features = ["sqlite"] }
 diesel_migrations = { version = "2.2.0" }
