--- a/meta-secret/core/Cargo.toml
+++ b/meta-secret/core/Cargo.toml
@@ -16,9 +16,6 @@ test-framework = []
 crate-type = ["cdylib", "lib", "staticlib"]
 name = "meta_secret_core"
 
-[build]
-target = "x86_64-unknown-linux-gnu"
-
 [dependencies]
 thiserror.workspace = true
 anyhow.workspace = true
@@ -37,6 +34,8 @@ serde_derive.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
 tracing-attributes.workspace = true
+
+reqwest.workspace = true
 
 ed25519-dalek.workspace = true
 rand.workspace = true
