--- a/meta-secret/mobile/ios/Cargo.toml
+++ b/meta-secret/mobile/ios/Cargo.toml
@@ -20,6 +20,8 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 tracing-attributes.workspace = true
 reqwest = "0.12.15"
+tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "sync", "time"] }
+futures = "0.3.30"
 
 [dev-dependencies]
 tokio = { version = "1.44.1", features = ["full"] }
